2012-01-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, indRetryTest.sh
	[ 3478933 ] Sequence Number reset issues

2012-01-25 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c
	[ 3478930 ] Handle SIGPIPE in providerMgr

2011-12-11 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/SAE*
	[ 3433733 ] CreationClassNames should be supplied 
	test case issues

2011-11-30 Narasimha Sharoff <nsharoff@us.ibm.com>

	* cimXmlGen.c, cimXmlGen.h, cimXmlRequest.c, Makefile.am,
	sqlStatement.c   Added file - utilTypeCk.c
	[ 3446179 ] Add a feature to validate CMPI types

2011-11-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, instance.c, instance.h:
	[ 3433733 ] CreationClassNames should be supplied 

2011-11-22 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimXmlParser.c, control.c, httpAdapter.c, sfcb.cfg.pre.in:
	[ 3435778 ] Preserve leading/trailing whitespace in values

2011-11-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBasicPAMAuthentication.c:
	[ 3367332 ] RHOST Support for PAM

	* control.c, httpAdapter.c, sfcb.cfg.pre.in:
	[ 3367333 ] New entry point for authentication librarya

2011-11-07 Narasimha Sharoff <nsharoff@us.ibm.com>

	* cimXmlGen.c:
	[ 3419721 ] reset CMPIValue buffer in str2CMPIValue

2011-10-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3428806 ] type=null in authorizeFilter call

2011-10-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indication.mof:
	[ 3422650 ] Associators calls to IndicationService depends on cmpi-base

2011-10-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indication.mof:
	[ 3416167 ] CIM_InstDeletion not in class repo by default

2011-09-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3416055 ] SIGSEGV sometimes does not print provider name
	(patch by Klaus Kaempf)

	* brokerUpc.c: