@@ -1,3 +1,3 @@
 <IMETHODRESPONSE NAME="ModifyInstance">
-<ERROR CODE="7" DESCRIPTION="The requested operation is not supported"/>
+<ERROR CODE="6" DESCRIPTION="The requested object could not be found"/>
 </IMETHODRESPONSE>
